# deal_memory

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
data/config/: model.txt  prompt.txt
data/pools/: manual-big.jsonl  manual-v1.jsonl
data/sample/: dialogs.jsonl  predictions.jsonl
docs/: roadmap.md
src/deal_memory/: annotations.py  cli.py  eval.py  extract.py  gigachat.py  metrics.py  schema.py  storage.py  synth.py  ui.py
tests/: conftest.py  test_annotations.py  test_eval.py  test_extract.py  test_metrics.py  test_synth.py
