[project]
name = "deal-memory"
version = "0.1.0"
description = "Vertical deal-memory MVP for B2B IT-equipment sales (GigaChat extraction + eval)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.32",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
dm = "deal_memory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deal_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
